<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="org.example.project.ao_1.app.RitchieActivity">

    <ImageView
            android:layout_width="400px"
            android:layout_height="400px"
            android:id="@+id/dmr_image"
            android:src="@drawable/dmr" android:contentDescription="@string/dmr_image_description"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dmr_firstname"
            android:id="@+id/dmr_firstname" android:layout_alignTop="@+id/dmr_image"
            android:layout_toRightOf="@+id/dmr_image" android:layout_toEndOf="@+id/dmr_image"
            android:layout_marginLeft="10dp" android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dmr_middlename"
            android:id="@+id/dmr_middlename"
            android:layout_below="@+id/dmr_firstname" android:layout_alignLeft="@+id/dmr_firstname"
            android:layout_alignStart="@+id/dmr_firstname" android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dmr_lastname"
            android:id="@+id/dmr_lastname"
            android:layout_below="@+id/dmr_middlename" android:layout_alignLeft="@+id/dmr_middlename"
            android:layout_alignStart="@+id/dmr_middlename" android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/dmr_dobd"
            android:id="@+id/dmr_dobd" android:layout_below="@+id/dmr_lastname"
            android:layout_alignLeft="@+id/dmr_lastname"
            android:layout_alignStart="@+id/dmr_lastname" android:layout_marginTop="10dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dmr_scroll" android:layout_below="@+id/dmr_image" android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" android:fillViewport="false">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dmr_description"
                android:id="@+id/dmr_description"/>
    </ScrollView>
</RelativeLayout>
