<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="org.example.project.ao_1.app.TorvaldsActivity">

    <ImageView
            android:layout_width="400px"
            android:layout_height="400px"
            android:id="@+id/lbt_image"
            android:src="@drawable/lbt" android:contentDescription="@string/lbt_image_description"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbt_firstname"
            android:id="@+id/lbt_firstname" android:layout_alignTop="@+id/lbt_image"
            android:layout_toRightOf="@+id/lbt_image" android:layout_toEndOf="@+id/lbt_image"
            android:layout_marginLeft="10dp" android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbt_middlename"
            android:id="@+id/lbt_middlename"
            android:layout_below="@+id/lbt_firstname" android:layout_alignLeft="@+id/lbt_firstname"
            android:layout_alignStart="@+id/lbt_firstname" android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbt_lastname"
            android:id="@+id/lbt_lastname"
            android:layout_below="@+id/lbt_middlename" android:layout_alignLeft="@+id/lbt_middlename"
            android:layout_alignStart="@+id/lbt_middlename" android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbt_dobd"
            android:id="@+id/lbt_dobd" android:layout_below="@+id/lbt_lastname"
            android:layout_alignLeft="@+id/lbt_lastname"
            android:layout_alignStart="@+id/lbt_lastname" android:layout_marginTop="10dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lbt_scroll" android:layout_below="@+id/lbt_image" android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" android:fillViewport="false">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lbt_description"
                android:id="@+id/lbt_description"/>
    </ScrollView>
</RelativeLayout>
