<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity" android:id="@+id/rl">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rms_layout"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginLeft="20dp" android:layout_marginTop="20dp"
            android:onClick="onStallmanClick">
        <ImageView
                android:layout_width="200px"
                android:layout_height="200px"
                android:id="@+id/rms_image"
                android:src="@drawable/rms"
                android:contentDescription="@string/rms_image_description" android:clickable="true"
                android:onClick="onImageClick"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/rms_name"
                android:id="@+id/rms_name" android:textSize="26sp"
                android:layout_centerVertical="true" android:layout_toRightOf="@+id/rms_image"
                android:layout_toEndOf="@+id/rms_image" android:layout_marginLeft="10dp"
                android:onClick="onStallmanClick"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbt_layout"
            android:layout_below="@+id/rms_layout" android:layout_alignLeft="@+id/rms_layout"
            android:layout_alignStart="@+id/rms_layout" android:layout_marginTop="40dp"
            android:onClick="onTorvaldsClick">
        <ImageView
                android:layout_width="200px"
                android:layout_height="200px"
                android:id="@+id/lbt_image" android:src="@drawable/lbt" android:nestedScrollingEnabled="false"
                android:contentDescription="@string/lbt_image_description" android:clickable="true"
                android:onClick="onImageClick"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbt_name"
                android:id="@+id/lbt_name" android:textSize="26sp"
                android:layout_centerVertical="true" android:layout_toRightOf="@+id/lbt_image"
                android:layout_toEndOf="@+id/lbt_image" android:layout_marginLeft="10dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dmr_layout" android:layout_below="@+id/lbt_layout"
            android:layout_alignLeft="@+id/lbt_layout" android:layout_alignStart="@+id/lbt_layout"
            android:layout_marginTop="40dp" android:onClick="onRitchieClick">
        <ImageView
                android:layout_width="200px"
                android:layout_height="200px"
                android:id="@+id/dmr_image" android:src="@drawable/dmr"
                android:contentDescription="@string/dmr_image_description" android:clickable="true"
                android:onClick="onImageClick"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dmr_name"
                android:id="@+id/dmr_name" android:textSize="26sp"
                android:layout_centerVertical="true" android:layout_toRightOf="@+id/dmr_image"
                android:layout_toEndOf="@+id/dmr_image" android:layout_marginLeft="10dp"/>
    </RelativeLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/hint"
            android:id="@+id/hint" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
            android:textSize="12sp"/>
</RelativeLayout>
